<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shipping Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="weightLBL">Weight of the package - RelativeLayout</string>
    <string name="weightLBL2">Weight of the package - ConstraintLayout</string>
    <string name="ouncesLBL">(in ounces)</string>
    <string name="baseLBL">Base Cost:</string>
    <string name="addCostLBL">Added Cost:</string>
    <string name="totalLBL">Total Shipping Cost:</string>
    <string name="zeroDec">$0.00</string>
    <string name="zero">0</string>

</resources>
